parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    RANGO

Grammar

Rule 0     S' -> programa
Rule 1     programa -> sentencias_opt
Rule 2     sentencias_opt -> sentencias
Rule 3     sentencias_opt -> <empty>
Rule 4     sentencias -> sentencia NEWLINE sentencias
Rule 5     sentencias -> sentencia NEWLINE
Rule 6     sentencias -> sentencia
Rule 7     sentencia -> asignacion
Rule 8     sentencia -> imprimir
Rule 9     sentencia -> condicion
Rule 10    sentencia -> mientras
Rule 11    sentencia -> para
Rule 12    sentencia -> retornar
Rule 13    sentencia -> declaracion_funcion
Rule 14    sentencia -> declaracion_variable
Rule 15    sentencia -> declaracion_array
Rule 16    sentencia -> leer
Rule 17    sentencia -> llamada_funcion_simple
Rule 18    tipo_dato -> INT_TYPE
Rule 19    tipo_dato -> FLOAT_TYPE
Rule 20    tipo_dato -> STRING_TYPE
Rule 21    tipo_dato -> BOOL_TYPE
Rule 22    declaracion_variable -> tipo_dato IDENTIFICADOR
Rule 23    declaracion_variable -> tipo_dato IDENTIFICADOR IGUAL expresion
Rule 24    asignacion -> IDENTIFICADOR IGUAL expresion
Rule 25    asignacion -> IDENTIFICADOR CORCHETE_IZQ expresion CORCHETE_DER IGUAL expresion
Rule 26    leer -> LEER PARENTESIS_IZQ IDENTIFICADOR PARENTESIS_DER
Rule 27    imprimir -> IMPRIMIR PARENTESIS_IZQ expresion PARENTESIS_DER
Rule 28    expresion -> expresion Y expresion
Rule 29    expresion -> expresion O expresion
Rule 30    expresion -> expresion MAS expresion
Rule 31    expresion -> expresion MENOS expresion
Rule 32    expresion -> expresion MULT expresion
Rule 33    expresion -> expresion DIV expresion
Rule 34    expresion -> expresion MOD expresion
Rule 35    expresion -> expresion MAYOR expresion
Rule 36    expresion -> expresion MENOR expresion
Rule 37    expresion -> expresion MAYOR_IGUAL expresion
Rule 38    expresion -> expresion MENOR_IGUAL expresion
Rule 39    expresion -> expresion IGUAL_IGUAL expresion
Rule 40    expresion -> expresion DIFERENTE expresion
Rule 41    expresion -> MENOS expresion
Rule 42    expresion -> NO expresion
Rule 43    expresion -> PARENTESIS_IZQ expresion PARENTESIS_DER
Rule 44    expresion -> IDENTIFICADOR
Rule 45    expresion -> NUMERO
Rule 46    expresion -> CADENA
Rule 47    expresion -> BOOLEANO
Rule 48    expresion -> IDENTIFICADOR PARENTESIS_IZQ argumentos PARENTESIS_DER
Rule 49    llamada_funcion_simple -> IDENTIFICADOR PARENTESIS_IZQ argumentos PARENTESIS_DER
Rule 50    argumentos -> expresion_lista
Rule 51    argumentos -> <empty>
Rule 52    expresion_lista -> expresion
Rule 53    expresion_lista -> expresion_lista COMA expresion
Rule 54    expresion -> IDENTIFICADOR CORCHETE_IZQ expresion CORCHETE_DER
Rule 55    declaracion_array -> tipo_dato IDENTIFICADOR CORCHETE_IZQ NUMERO CORCHETE_DER
Rule 56    declaracion_array -> tipo_dato IDENTIFICADOR CORCHETE_IZQ NUMERO CORCHETE_DER IGUAL LLAVE_IZQ lista_valores LLAVE_DER
Rule 57    lista_valores -> expresion
Rule 58    lista_valores -> lista_valores COMA expresion
Rule 59    bloque -> LLAVE_IZQ NEWLINE sentencias_opt NEWLINE LLAVE_DER
Rule 60    bloque -> LLAVE_IZQ NEWLINE sentencias_opt LLAVE_DER
Rule 61    bloque -> LLAVE_IZQ sentencias_opt NEWLINE LLAVE_DER
Rule 62    bloque -> LLAVE_IZQ sentencias_opt LLAVE_DER
Rule 63    condicion -> SI PARENTESIS_IZQ expresion PARENTESIS_DER bloque
Rule 64    condicion -> SI PARENTESIS_IZQ expresion PARENTESIS_DER bloque SINO bloque
Rule 65    mientras -> MIENTRAS PARENTESIS_IZQ expresion PARENTESIS_DER bloque
Rule 66    para -> PARA PARENTESIS_IZQ asignacion_opt PUNTO_COMA expresion PUNTO_COMA asignacion_opt PARENTESIS_DER bloque
Rule 67    asignacion_opt -> asignacion
Rule 68    asignacion_opt -> <empty>
Rule 69    retornar -> RETORNAR expresion
Rule 70    declaracion_funcion -> FUNC IDENTIFICADOR PARENTESIS_IZQ parametros PARENTESIS_DER bloque
Rule 71    declaracion_funcion -> FUNC tipo_dato IDENTIFICADOR PARENTESIS_IZQ parametros PARENTESIS_DER bloque
Rule 72    parametros -> lista_parametros
Rule 73    parametros -> <empty>
Rule 74    lista_parametros -> tipo_dato IDENTIFICADOR
Rule 75    lista_parametros -> lista_parametros COMA tipo_dato IDENTIFICADOR

Terminals, with rules where they appear

BOOLEANO             : 47
BOOL_TYPE            : 21
CADENA               : 46
COMA                 : 53 58 75
CORCHETE_DER         : 25 54 55 56
CORCHETE_IZQ         : 25 54 55 56
DIFERENTE            : 40
DIV                  : 33
FLOAT_TYPE           : 19
FUNC                 : 70 71
IDENTIFICADOR        : 22 23 24 25 26 44 48 49 54 55 56 70 71 74 75
IGUAL                : 23 24 25 56
IGUAL_IGUAL          : 39
IMPRIMIR             : 27
INT_TYPE             : 18
LEER                 : 26
LLAVE_DER            : 56 59 60 61 62
LLAVE_IZQ            : 56 59 60 61 62
MAS                  : 30
MAYOR                : 35
MAYOR_IGUAL          : 37
MENOR                : 36
MENOR_IGUAL          : 38
MENOS                : 31 41
MIENTRAS             : 65
MOD                  : 34
MULT                 : 32
NEWLINE              : 4 5 59 59 60 61
NO                   : 42
NUMERO               : 45 55 56
O                    : 29
PARA                 : 66
PARENTESIS_DER       : 26 27 43 48 49 63 64 65 66 70 71
PARENTESIS_IZQ       : 26 27 43 48 49 63 64 65 66 70 71
PUNTO_COMA           : 66 66
RANGO                : 
RETORNAR             : 69
SI                   : 63 64
SINO                 : 64
STRING_TYPE          : 20
Y                    : 28
error                : 

Nonterminals, with rules where they appear

argumentos           : 48 49
asignacion           : 7 67
asignacion_opt       : 66 66
bloque               : 63 64 64 65 66 70 71
condicion            : 9
declaracion_array    : 15
declaracion_funcion  : 13
declaracion_variable : 14
expresion            : 23 24 25 25 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 42 43 52 53 54 57 58 63 64 65 66 69
expresion_lista      : 50 53
imprimir             : 8
leer                 : 16
lista_parametros     : 72 75
lista_valores        : 56 58
llamada_funcion_simple : 17
mientras             : 10
para                 : 11
parametros           : 70 71
programa             : 0
retornar             : 12
sentencia            : 4 5 6
sentencias           : 2 4
sentencias_opt       : 1 59 60 61 62
tipo_dato            : 22 23 55 56 71 74 75

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . sentencias_opt
    (2) sentencias_opt -> . sentencias
    (3) sentencias_opt -> .
    (4) sentencias -> . sentencia NEWLINE sentencias
    (5) sentencias -> . sentencia NEWLINE
    (6) sentencias -> . sentencia
    (7) sentencia -> . asignacion
    (8) sentencia -> . imprimir
    (9) sentencia -> . condicion
    (10) sentencia -> . mientras
    (11) sentencia -> . para
    (12) sentencia -> . retornar
    (13) sentencia -> . declaracion_funcion
    (14) sentencia -> . declaracion_variable
    (15) sentencia -> . declaracion_array
    (16) sentencia -> . leer
    (17) sentencia -> . llamada_funcion_simple
    (24) asignacion -> . IDENTIFICADOR IGUAL expresion
    (25) asignacion -> . IDENTIFICADOR CORCHETE_IZQ expresion CORCHETE_DER IGUAL expresion
    (27) imprimir -> . IMPRIMIR PARENTESIS_IZQ expresion PARENTESIS_DER
    (63) condicion -> . SI PARENTESIS_IZQ expresion PARENTESIS_DER bloque
    (64) condicion -> . SI PARENTESIS_IZQ expresion PARENTESIS_DER bloque SINO bloque
    (65) mientras -> . MIENTRAS PARENTESIS_IZQ expresion PARENTESIS_DER bloque
    (66) para -> . PARA PARENTESIS_IZQ asignacion_opt PUNTO_COMA expresion PUNTO_COMA asignacion_opt PARENTESIS_DER bloque
    (69) retornar -> . RETORNAR expresion
    (70) declaracion_funcion -> . FUNC IDENTIFICADOR PARENTESIS_IZQ parametros PARENTESIS_DER bloque
    (71) declaracion_funcion -> . FUNC tipo_dato IDENTIFICADOR PARENTESIS_IZQ parametros PARENTESIS_DER bloque
    (22) declaracion_variable -> . tipo_dato IDENTIFICADOR
    (23) declaracion_variable -> . tipo_dato IDENTIFICADOR IGUAL expresion
    (55) declaracion_array -> . tipo_dato IDENTIFICADOR CORCHETE_IZQ NUMERO CORCHETE_DER
    (56) declaracion_array -> . tipo_dato IDENTIFICADOR CORCHETE_IZQ NUMERO CORCHETE_DER IGUAL LLAVE_IZQ lista_valores LLAVE_DER
    (26) leer -> . LEER PARENTESIS_IZQ IDENTIFICADOR PARENTESIS_DER
    (49) llamada_funcion_simple -> . IDENTIFICADOR PARENTESIS_IZQ argumentos PARENTESIS_DER
    (18) tipo_dato -> . INT_TYPE
    (19) tipo_dato -> . FLOAT_TYPE
    (20) tipo_dato -> . STRING_TYPE
    (21) tipo_dato -> . BOOL_TYPE

    $end            reduce using rule 3 (sentencias_opt -> .)
    IDENTIFICADOR   shift and go to state 16
    IMPRIMIR        shift and go to state 17
    SI              shift and go to state 18
    MIENTRAS        shift and go to state 19
    PARA            shift and go to state 20
    RETORNAR        shift and go to state 21
    FUNC            shift and go to state 22
    LEER            shift and go to state 24
    INT_TYPE        shift and go to state 25
    FLOAT_TYPE      shift and go to state 26
    STRING_TYPE     shift and go to state 27
    BOOL_TYPE       shift and go to state 28

    programa                       shift and go to state 1
    sentencias_opt                 shift and go to state 2
    sentencias                     shift and go to state 3
    sentencia                      shift and go to state 4
    asignacion                     shift and go to state 5
    imprimir                       shift and go to state 6
    condicion                      shift and go to state 7
    mientras                       shift and go to state 8
    para                           shift and go to state 9
    retornar                       shift and go to state 10
    declaracion_funcion            shift and go to state 11
    declaracion_variable           shift and go to state 12
    declaracion_array              shift and go to state 13
    leer                           shift and go to state 14
    llamada_funcion_simple         shift and go to state 15
    tipo_dato                      shift and go to state 23

state 1

    (0) S' -> programa .



state 2

    (1) programa -> sentencias_opt .

    $end            reduce using rule 1 (programa -> sentencias_opt .)


state 3

    (2) sentencias_opt -> sentencias .

    $end            reduce using rule 2 (sentencias_opt -> sentencias .)
    NEWLINE         reduce using rule 2 (sentencias_opt -> sentencias .)
    LLAVE_DER       reduce using rule 2 (sentencias_opt -> sentencias .)


state 4

    (4) sentencias -> sentencia . NEWLINE sentencias
    (5) sentencias -> sentencia . NEWLINE
    (6) sentencias -> sentencia .

  ! shift/reduce conflict for NEWLINE resolved as shift
    NEWLINE         shift and go to state 29
    $end            reduce using rule 6 (sentencias -> sentencia .)
    LLAVE_DER       reduce using rule 6 (sentencias -> sentencia .)

  ! NEWLINE         [ reduce using rule 6 (sentencias -> sentencia .) ]


state 5

    (7) sentencia -> asignacion .

    NEWLINE         reduce using rule 7 (sentencia -> asignacion .)
    $end            reduce using rule 7 (sentencia -> asignacion .)
    LLAVE_DER       reduce using rule 7 (sentencia -> asignacion .)


state 6

    (8) sentencia -> imprimir .

    NEWLINE         reduce using rule 8 (sentencia -> imprimir .)
    $end            reduce using rule 8 (sentencia -> imprimir .)
    LLAVE_DER       reduce using rule 8 (sentencia -> imprimir .)


state 7

    (9) sentencia -> condicion .

    NEWLINE         reduce using rule 9 (sentencia -> condicion .)
    $end            reduce using rule 9 (sentencia -> condicion .)
    LLAVE_DER       reduce using rule 9 (sentencia -> condicion .)


state 8

    (10) sentencia -> mientras .

    NEWLINE         reduce using rule 10 (sentencia -> mientras .)
    $end            reduce using rule 10 (sentencia -> mientras .)
    LLAVE_DER       reduce using rule 10 (sentencia -> mientras .)


state 9

    (11) sentencia -> para .

    NEWLINE         reduce using rule 11 (sentencia -> para .)
    $end            reduce using rule 11 (sentencia -> para .)
    LLAVE_DER       reduce using rule 11 (sentencia -> para .)


state 10

    (12) sentencia -> retornar .

    NEWLINE         reduce using rule 12 (sentencia -> retornar .)
    $end            reduce using rule 12 (sentencia -> retornar .)
    LLAVE_DER       reduce using rule 12 (sentencia -> retornar .)


state 11

    (13) sentencia -> declaracion_funcion .

    NEWLINE         reduce using rule 13 (sentencia -> declaracion_funcion .)
    $end            reduce using rule 13 (sentencia -> declaracion_funcion .)
    LLAVE_DER       reduce using rule 13 (sentencia -> declaracion_funcion .)


state 12

    (14) sentencia -> declaracion_variable .

    NEWLINE         reduce using rule 14 (sentencia -> declaracion_variable .)
    $end            reduce using rule 14 (sentencia -> declaracion_variable .)
    LLAVE_DER       reduce using rule 14 (sentencia -> declaracion_variable .)


state 13

    (15) sentencia -> declaracion_array .

    NEWLINE         reduce using rule 15 (sentencia -> declaracion_array .)
    $end            reduce using rule 15 (sentencia -> declaracion_array .)
    LLAVE_DER       reduce using rule 15 (sentencia -> declaracion_array .)


state 14

    (16) sentencia -> leer .

    NEWLINE         reduce using rule 16 (sentencia -> leer .)
    $end            reduce using rule 16 (sentencia -> leer .)
    LLAVE_DER       reduce using rule 16 (sentencia -> leer .)


state 15

    (17) sentencia -> llamada_funcion_simple .

    NEWLINE         reduce using rule 17 (sentencia -> llamada_funcion_simple .)
    $end            reduce using rule 17 (sentencia -> llamada_funcion_simple .)
    LLAVE_DER       reduce using rule 17 (sentencia -> llamada_funcion_simple .)


state 16

    (24) asignacion -> IDENTIFICADOR . IGUAL expresion
    (25) asignacion -> IDENTIFICADOR . CORCHETE_IZQ expresion CORCHETE_DER IGUAL expresion
    (49) llamada_funcion_simple -> IDENTIFICADOR . PARENTESIS_IZQ argumentos PARENTESIS_DER

    IGUAL           shift and go to state 30
    CORCHETE_IZQ    shift and go to state 31
    PARENTESIS_IZQ  shift and go to state 32


state 17

    (27) imprimir -> IMPRIMIR . PARENTESIS_IZQ expresion PARENTESIS_DER

    PARENTESIS_IZQ  shift and go to state 33


state 18

    (63) condicion -> SI . PARENTESIS_IZQ expresion PARENTESIS_DER bloque
    (64) condicion -> SI . PARENTESIS_IZQ expresion PARENTESIS_DER bloque SINO bloque

    PARENTESIS_IZQ  shift and go to state 34


state 19

    (65) mientras -> MIENTRAS . PARENTESIS_IZQ expresion PARENTESIS_DER bloque

    PARENTESIS_IZQ  shift and go to state 35


state 20

    (66) para -> PARA . PARENTESIS_IZQ asignacion_opt PUNTO_COMA expresion PUNTO_COMA asignacion_opt PARENTESIS_DER bloque

    PARENTESIS_IZQ  shift and go to state 36


state 21

    (69) retornar -> RETORNAR . expresion
    (28) expresion -> . expresion Y expresion
    (29) expresion -> . expresion O expresion
    (30) expresion -> . expresion MAS expresion
    (31) expresion -> . expresion MENOS expresion
    (32) expresion -> . expresion MULT expresion
    (33) expresion -> . expresion DIV expresion
    (34) expresion -> . expresion MOD expresion
    (35) expresion -> . expresion MAYOR expresion
    (36) expresion -> . expresion MENOR expresion
    (37) expresion -> . expresion MAYOR_IGUAL expresion
    (38) expresion -> . expresion MENOR_IGUAL expresion
    (39) expresion -> . expresion IGUAL_IGUAL expresion
    (40) expresion -> . expresion DIFERENTE expresion
    (41) expresion -> . MENOS expresion
    (42) expresion -> . NO expresion
    (43) expresion -> . PARENTESIS_IZQ expresion PARENTESIS_DER
    (44) expresion -> . IDENTIFICADOR
    (45) expresion -> . NUMERO
    (46) expresion -> . CADENA
    (47) expresion -> . BOOLEANO
    (48) expresion -> . IDENTIFICADOR PARENTESIS_IZQ argumentos PARENTESIS_DER
    (54) expresion -> . IDENTIFICADOR CORCHETE_IZQ expresion CORCHETE_DER

    MENOS           shift and go to state 38
    NO              shift and go to state 39
    PARENTESIS_IZQ  shift and go to state 40
    IDENTIFICADOR   shift and go to state 41
    NUMERO          shift and go to state 42
    CADENA          shift and go to state 43
    BOOLEANO        shift and go to state 44

    expresion                      shift and go to state 37

state 22

    (70) declaracion_funcion -> FUNC . IDENTIFICADOR PARENTESIS_IZQ parametros PARENTESIS_DER bloque
    (71) declaracion_funcion -> FUNC . tipo_dato IDENTIFICADOR PARENTESIS_IZQ parametros PARENTESIS_DER bloque
    (18) tipo_dato -> . INT_TYPE
    (19) tipo_dato -> . FLOAT_TYPE
    (20) tipo_dato -> . STRING_TYPE
    (21) tipo_dato -> . BOOL_TYPE

    IDENTIFICADOR   shift and go to state 45
    INT_TYPE        shift and go to state 25
    FLOAT_TYPE      shift and go to state 26
    STRING_TYPE     shift and go to state 27
    BOOL_TYPE       shift and go to state 28

    tipo_dato                      shift and go to state 46

state 23

    (22) declaracion_variable -> tipo_dato . IDENTIFICADOR
    (23) declaracion_variable -> tipo_dato . IDENTIFICADOR IGUAL expresion
    (55) declaracion_array -> tipo_dato . IDENTIFICADOR CORCHETE_IZQ NUMERO CORCHETE_DER
    (56) declaracion_array -> tipo_dato . IDENTIFICADOR CORCHETE_IZQ NUMERO CORCHETE_DER IGUAL LLAVE_IZQ lista_valores LLAVE_DER

    IDENTIFICADOR   shift and go to state 47


state 24

    (26) leer -> LEER . PARENTESIS_IZQ IDENTIFICADOR PARENTESIS_DER

    PARENTESIS_IZQ  shift and go to state 48


state 25

    (18) tipo_dato -> INT_TYPE .

    IDENTIFICADOR   reduce using rule 18 (tipo_dato -> INT_TYPE .)


state 26

    (19) tipo_dato -> FLOAT_TYPE .

    IDENTIFICADOR   reduce using rule 19 (tipo_dato -> FLOAT_TYPE .)


state 27

    (20) tipo_dato -> STRING_TYPE .

    IDENTIFICADOR   reduce using rule 20 (tipo_dato -> STRING_TYPE .)


state 28

    (21) tipo_dato -> BOOL_TYPE .

    IDENTIFICADOR   reduce using rule 21 (tipo_dato -> BOOL_TYPE .)


state 29

    (4) sentencias -> sentencia NEWLINE . sentencias
    (5) sentencias -> sentencia NEWLINE .
    (4) sentencias -> . sentencia NEWLINE sentencias
    (5) sentencias -> . sentencia NEWLINE
    (6) sentencias -> . sentencia
    (7) sentencia -> . asignacion
    (8) sentencia -> . imprimir
    (9) sentencia -> . condicion
    (10) sentencia -> . mientras
    (11) sentencia -> . para
    (12) sentencia -> . retornar
    (13) sentencia -> . declaracion_funcion
    (14) sentencia -> . declaracion_variable
    (15) sentencia -> . declaracion_array
    (16) sentencia -> . leer
    (17) sentencia -> . llamada_funcion_simple
    (24) asignacion -> . IDENTIFICADOR IGUAL expresion
    (25) asignacion -> . IDENTIFICADOR CORCHETE_IZQ expresion CORCHETE_DER IGUAL expresion
    (27) imprimir -> . IMPRIMIR PARENTESIS_IZQ expresion PARENTESIS_DER
    (63) condicion -> . SI PARENTESIS_IZQ expresion PARENTESIS_DER bloque
    (64) condicion -> . SI PARENTESIS_IZQ expresion PARENTESIS_DER bloque SINO bloque
    (65) mientras -> . MIENTRAS PARENTESIS_IZQ expresion PARENTESIS_DER bloque
    (66) para -> . PARA PARENTESIS_IZQ asignacion_opt PUNTO_COMA expresion PUNTO_COMA asignacion_opt PARENTESIS_DER bloque
    (69) retornar -> . RETORNAR expresion
    (70) declaracion_funcion -> . FUNC IDENTIFICADOR PARENTESIS_IZQ parametros PARENTESIS_DER bloque
    (71) declaracion_funcion -> . FUNC tipo_dato IDENTIFICADOR PARENTESIS_IZQ parametros PARENTESIS_DER bloque
    (22) declaracion_variable -> . tipo_dato IDENTIFICADOR
    (23) declaracion_variable -> . tipo_dato IDENTIFICADOR IGUAL expresion
    (55) declaracion_array -> . tipo_dato IDENTIFICADOR CORCHETE_IZQ NUMERO CORCHETE_DER
    (56) declaracion_array -> . tipo_dato IDENTIFICADOR CORCHETE_IZQ NUMERO CORCHETE_DER IGUAL LLAVE_IZQ lista_valores LLAVE_DER
    (26) leer -> . LEER PARENTESIS_IZQ IDENTIFICADOR PARENTESIS_DER
    (49) llamada_funcion_simple -> . IDENTIFICADOR PARENTESIS_IZQ argumentos PARENTESIS_DER
    (18) tipo_dato -> . INT_TYPE
    (19) tipo_dato -> . FLOAT_TYPE
    (20) tipo_dato -> . STRING_TYPE
    (21) tipo_dato -> . BOOL_TYPE

    $end            reduce using rule 5 (sentencias -> sentencia NEWLINE .)
    NEWLINE         reduce using rule 5 (sentencias -> sentencia NEWLINE .)
    LLAVE_DER       reduce using rule 5 (sentencias -> sentencia NEWLINE .)
    IDENTIFICADOR   shift and go to state 16
    IMPRIMIR        shift and go to state 17
    SI              shift and go to state 18
    MIENTRAS        shift and go to state 19
    PARA            shift and go to state 20
    RETORNAR        shift and go to state 21
    FUNC            shift and go to state 22
    LEER            shift and go to state 24
    INT_TYPE        shift and go to state 25
    FLOAT_TYPE      shift and go to state 26
    STRING_TYPE     shift and go to state 27
    BOOL_TYPE       shift and go to state 28

    sentencia                      shift and go to state 4
    sentencias                     shift and go to state 49
    asignacion                     shift and go to state 5
    imprimir                       shift and go to state 6
    condicion                      shift and go to state 7
    mientras                       shift and go to state 8
    para                           shift and go to state 9
    retornar                       shift and go to state 10
    declaracion_funcion            shift and go to state 11
    declaracion_variable           shift and go to state 12
    declaracion_array              shift and go to state 13
    leer                           shift and go to state 14
    llamada_funcion_simple         shift and go to state 15
    tipo_dato                      shift and go to state 23

state 30

    (24) asignacion -> IDENTIFICADOR IGUAL . expresion
    (28) expresion -> . expresion Y expresion
    (29) expresion -> . expresion O expresion
    (30) expresion -> . expresion MAS expresion
    (31) expresion -> . expresion MENOS expresion
    (32) expresion -> . expresion MULT expresion
    (33) expresion -> . expresion DIV expresion
    (34) expresion -> . expresion MOD expresion
    (35) expresion -> . expresion MAYOR expresion
    (36) expresion -> . expresion MENOR expresion
    (37) expresion -> . expresion MAYOR_IGUAL expresion
    (38) expresion -> . expresion MENOR_IGUAL expresion
    (39) expresion -> . expresion IGUAL_IGUAL expresion
    (40) expresion -> . expresion DIFERENTE expresion
    (41) expresion -> . MENOS expresion
    (42) expresion -> . NO expresion
    (43) expresion -> . PARENTESIS_IZQ expresion PARENTESIS_DER
    (44) expresion -> . IDENTIFICADOR
    (45) expresion -> . NUMERO
    (46) expresion -> . CADENA
    (47) expresion -> . BOOLEANO
    (48) expresion -> . IDENTIFICADOR PARENTESIS_IZQ argumentos PARENTESIS_DER
    (54) expresion -> . IDENTIFICADOR CORCHETE_IZQ expresion CORCHETE_DER

    MENOS           shift and go to state 38
    NO              shift and go to state 39
    PARENTESIS_IZQ  shift and go to state 40
    IDENTIFICADOR   shift and go to state 41
    NUMERO          shift and go to state 42
    CADENA          shift and go to state 43
    BOOLEANO        shift and go to state 44

    expresion                      shift and go to state 50

state 31

    (25) asignacion -> IDENTIFICADOR CORCHETE_IZQ . expresion CORCHETE_DER IGUAL expresion
    (28) expresion -> . expresion Y expresion
    (29) expresion -> . expresion O expresion
    (30) expresion -> . expresion MAS expresion
    (31) expresion -> . expresion MENOS expresion
    (32) expresion -> . expresion MULT expresion
    (33) expresion -> . expresion DIV expresion
    (34) expresion -> . expresion MOD expresion
    (35) expresion -> . expresion MAYOR expresion
    (36) expresion -> . expresion MENOR expresion
    (37) expresion -> . expresion MAYOR_IGUAL expresion
    (38) expresion -> . expresion MENOR_IGUAL expresion
    (39) expresion -> . expresion IGUAL_IGUAL expresion
    (40) expresion -> . expresion DIFERENTE expresion
    (41) expresion -> . MENOS expresion
    (42) expresion -> . NO expresion
    (43) expresion -> . PARENTESIS_IZQ expresion PARENTESIS_DER
    (44) expresion -> . IDENTIFICADOR
    (45) expresion -> . NUMERO
    (46) expresion -> . CADENA
    (47) expresion -> . BOOLEANO
    (48) expresion -> . IDENTIFICADOR PARENTESIS_IZQ argumentos PARENTESIS_DER
    (54) expresion -> . IDENTIFICADOR CORCHETE_IZQ expresion CORCHETE_DER

    MENOS           shift and go to state 38
    NO              shift and go to state 39
    PARENTESIS_IZQ  shift and go to state 40
    IDENTIFICADOR   shift and go to state 41
    NUMERO          shift and go to state 42
    CADENA          shift and go to state 43
    BOOLEANO        shift and go to state 44

    expresion                      shift and go to state 51

state 32

    (49) llamada_funcion_simple -> IDENTIFICADOR PARENTESIS_IZQ . argumentos PARENTESIS_DER
    (50) argumentos -> . expresion_lista
    (51) argumentos -> .
    (52) expresion_lista -> . expresion
    (53) expresion_lista -> . expresion_lista COMA expresion
    (28) expresion -> . expresion Y expresion
    (29) expresion -> . expresion O expresion
    (30) expresion -> . expresion MAS expresion
    (31) expresion -> . expresion MENOS expresion
    (32) expresion -> . expresion MULT expresion
    (33) expresion -> . expresion DIV expresion
    (34) expresion -> . expresion MOD expresion
    (35) expresion -> . expresion MAYOR expresion
    (36) expresion -> . expresion MENOR expresion
    (37) expresion -> . expresion MAYOR_IGUAL expresion
    (38) expresion -> . expresion MENOR_IGUAL expresion
    (39) expresion -> . expresion IGUAL_IGUAL expresion
    (40) expresion -> . expresion DIFERENTE expresion
    (41) expresion -> . MENOS expresion
    (42) expresion -> . NO expresion
    (43) expresion -> . PARENTESIS_IZQ expresion PARENTESIS_DER
    (44) expresion -> . IDENTIFICADOR
    (45) expresion -> . NUMERO
    (46) expresion -> . CADENA
    (47) expresion -> . BOOLEANO
    (48) expresion -> . IDENTIFICADOR PARENTESIS_IZQ argumentos PARENTESIS_DER
    (54) expresion -> . IDENTIFICADOR CORCHETE_IZQ expresion CORCHETE_DER

    PARENTESIS_DER  reduce using rule 51 (argumentos -> .)
    MENOS           shift and go to state 38
    NO              shift and go to state 39
    PARENTESIS_IZQ  shift and go to state 40
    IDENTIFICADOR   shift and go to state 41
    NUMERO          shift and go to state 42
    CADENA          shift and go to state 43
    BOOLEANO        shift and go to state 44

    argumentos                     shift and go to state 52
    expresion_lista                shift and go to state 53
    expresion                      shift and go to state 54

state 33

    (27) imprimir -> IMPRIMIR PARENTESIS_IZQ . expresion PARENTESIS_DER
    (28) expresion -> . expresion Y expresion
    (29) expresion -> . expresion O expresion
    (30) expresion -> . expresion MAS expresion
    (31) expresion -> . expresion MENOS expresion
    (32) expresion -> . expresion MULT expresion
    (33) expresion -> . expresion DIV expresion
    (34) expresion -> . expresion MOD expresion
    (35) expresion -> . expresion MAYOR expresion
    (36) expresion -> . expresion MENOR expresion
    (37) expresion -> . expresion MAYOR_IGUAL expresion
    (38) expresion -> . expresion MENOR_IGUAL expresion
    (39) expresion -> . expresion IGUAL_IGUAL expresion
    (40) expresion -> . expresion DIFERENTE expresion
    (41) expresion -> . MENOS expresion
    (42) expresion -> . NO expresion
    (43) expresion -> . PARENTESIS_IZQ expresion PARENTESIS_DER
    (44) expresion -> . IDENTIFICADOR
    (45) expresion -> . NUMERO
    (46) expresion -> . CADENA
    (47) expresion -> . BOOLEANO
    (48) expresion -> . IDENTIFICADOR PARENTESIS_IZQ argumentos PARENTESIS_DER
    (54) expresion -> . IDENTIFICADOR CORCHETE_IZQ expresion CORCHETE_DER

    MENOS           shift and go to state 38
    NO              shift and go to state 39
    PARENTESIS_IZQ  shift and go to state 40
    IDENTIFICADOR   shift and go to state 41
    NUMERO          shift and go to state 42
    CADENA          shift and go to state 43
    BOOLEANO        shift and go to state 44

    expresion                      shift and go to state 55

state 34

    (63) condicion -> SI PARENTESIS_IZQ . expresion PARENTESIS_DER bloque
    (64) condicion -> SI PARENTESIS_IZQ . expresion PARENTESIS_DER bloque SINO bloque
    (28) expresion -> . expresion Y expresion
    (29) expresion -> . expresion O expresion
    (30) expresion -> . expresion MAS expresion
    (31) expresion -> . expresion MENOS expresion
    (32) expresion -> . expresion MULT expresion
    (33) expresion -> . expresion DIV expresion
    (34) expresion -> . expresion MOD expresion
    (35) expresion -> . expresion MAYOR expresion
    (36) expresion -> . expresion MENOR expresion
    (37) expresion -> . expresion MAYOR_IGUAL expresion
    (38) expresion -> . expresion MENOR_IGUAL expresion
    (39) expresion -> . expresion IGUAL_IGUAL expresion
    (40) expresion -> . expresion DIFERENTE expresion
    (41) expresion -> . MENOS expresion
    (42) expresion -> . NO expresion
    (43) expresion -> . PARENTESIS_IZQ expresion PARENTESIS_DER
    (44) expresion -> . IDENTIFICADOR
    (45) expresion -> . NUMERO
    (46) expresion -> . CADENA
    (47) expresion -> . BOOLEANO
    (48) expresion -> . IDENTIFICADOR PARENTESIS_IZQ argumentos PARENTESIS_DER
    (54) expresion -> . IDENTIFICADOR CORCHETE_IZQ expresion CORCHETE_DER

    MENOS           shift and go to state 38
    NO              shift and go to state 39
    PARENTESIS_IZQ  shift and go to state 40
    IDENTIFICADOR   shift and go to state 41
    NUMERO          shift and go to state 42
    CADENA          shift and go to state 43
    BOOLEANO        shift and go to state 44

    expresion                      shift and go to state 56

state 35

    (65) mientras -> MIENTRAS PARENTESIS_IZQ . expresion PARENTESIS_DER bloque
    (28) expresion -> . expresion Y expresion
    (29) expresion -> . expresion O expresion
    (30) expresion -> . expresion MAS expresion
    (31) expresion -> . expresion MENOS expresion
    (32) expresion -> . expresion MULT expresion
    (33) expresion -> . expresion DIV expresion
    (34) expresion -> . expresion MOD expresion
    (35) expresion -> . expresion MAYOR expresion
    (36) expresion -> . expresion MENOR expresion
    (37) expresion -> . expresion MAYOR_IGUAL expresion
    (38) expresion -> . expresion MENOR_IGUAL expresion
    (39) expresion -> . expresion IGUAL_IGUAL expresion
    (40) expresion -> . expresion DIFERENTE expresion
    (41) expresion -> . MENOS expresion
    (42) expresion -> . NO expresion
    (43) expresion -> . PARENTESIS_IZQ expresion PARENTESIS_DER
    (44) expresion -> . IDENTIFICADOR
    (45) expresion -> . NUMERO
    (46) expresion -> . CADENA
    (47) expresion -> . BOOLEANO
    (48) expresion -> . IDENTIFICADOR PARENTESIS_IZQ argumentos PARENTESIS_DER
    (54) expresion -> . IDENTIFICADOR CORCHETE_IZQ expresion CORCHETE_DER
